# openapi2callables

./: .bumpversion.cfg  .codecov.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: automerge.yml  dev.yml  lint.yml  preview.yml  publish.yml  pytest.yml  rebase.yml  release.yml  tagger.yml
docs/: Makefile  api.md  conf.py  installation.md  make.bat  usage.md
docs/source/: conf.py  index.rst
openapi2callables/: __init__.py  cli.py  parse.py  server.py  tools.py
openapi2tools/: cli.py  server.py
tests/: __init__.py  test_cli.py  test_openapi2tools.py  test_parse.py  test_parse_manual.py  test_server.py  test_server_parse_simple.py  test_tools.py
