[tool.pdm.build]
includes = ["openapi2callables"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Andrew Bolster", email = "andrew@bolster.online"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi<1.0.0,>=0.115.8",
    "requests<3.0.0,>=2.32.3",
    "jsonref<2.0.0,>=1.1.0",
    "uvicorn<1.0.0,>=0.34.0",
]
name = "openapi2callables"
version = "0.1.0"
description = "Experiment in parsing and projecting OpenAPI endpoints into OpenAI/GenericLLM compatible Tools (but should also be generic enough for non-llm directed usage...)"
readme = "README.md"

[project.urls]
homepage = "https://github.com/andrewbolster/openapi2callables"

[project.scripts]
openapi2callables = "openapi2callables.cli:cli"

[dependency-groups]
dev = [
    "pre-commit<5.0.0,>=4.1.0",
    "pytest>=8.3.4,<9.0.0",
    "ipykernel<7.0.0,>=6.29.5",
    "httpx<1.0.0,>=0.28.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.7",
]
